src/z80asm/z80asm2/t/30-directive/expected/line_01.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/line_01.asm
Assembling t/30-directive/input/line_01.asm...
t/30-directive/input/line_01.asm:1:5: error: Expected line number after LINE
    line ; no line number
        ^
